--- a/index.html
+++ b/index.html
@@ -1,19 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Weather Dashboard</title>
-        <link rel="stylesheet" href="./assets/style.css" />
-    </head> 
-    <body>
-        <div class="box">
-            <header>
-                <h1>Weather!</h1>
-            </header>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="./assets/style.css" />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body>
+    <header class="container-fluid text-center text-white bg-dark p-2">
+        <h1>Weather Dashboard</h1>
+    </header>
+    <div class="container-fluid">
+        <div class="row">
+            <aside class="col-lg-3 pb-3">
+                <h2 class="mt-3">
+                    Search for a City:
+                </h2>
+                <form class="form" id="city-search">
+                    <div class="form-inline form-group">
+                        <div class="input-group">
+                            <input class="form-input" id="text-input" type="text" placeholder="Insert City Here" />
+                            <div class="input-group-append">
+                                <button type="submit" id="search" class="btn btn-success search-button">
+                                    Search
+                                </button>
+                                <hr class="hr" />
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="list-group" id="history"></div>
+            </aside>
+            <div class="col-lg-9 pb-3">
+                <section class="mt-3" id="city-display">
+                </section>
+                <section class="row mt-3" id="5-day">
+                </section>
+            </div>
         </div>
-    </body>
-    <footer>
-        Made by Me 🧐
-    </footer>
-    <script src="./assets/script.js"></script>
+    </div>
+</body>
+<footer>
+</footer>
+<script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"
+      integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/plugin/utc.min.js"
+      integrity="sha512-m00bfmYnAl3plEBlQfeQUhw/U2uvmw29V2+jxSWpAjankMWS+zAsjezbKWDEJNXqWq9o9qQZSOiA2RKDpa4D5w=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/plugin/timezone.min.js"
+      integrity="sha512-pslqxxHAYPCxaSeFSmXXxDkLejD5dbFVC66aiVq0z4v7VTJBU+wqcG1OpNh4p3MjS2D6NCwz/H2QmSc7dXxryg=="
+      crossorigin="anonymous"
+    ></script>
+<script src="./assets/script.js"></script>
+
 </html>
