--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <header class="container-fluid text-center text-white bg-dark p-2">
         <h1>Weather Dashboard</h1>
     </header>
-
-    <!--City Search section-->
     <div class="container-fluid">
         <div class="row">
             <aside class="col-lg-3 pb-3">
@@ -25,9 +23,9 @@
                 <form class="form" id="city-search">
                     <div class="form-inline form-group">
                         <div class="input-group">
-                            <input id="inputKey" class="form-input" id="text-input" type="text" placeholder="Insert City Here" />
+                            <input class="form-input" id="text-input" type="text" placeholder="Insert City Here" />
                             <div class="input-group-append">
-                                <button id="searchBtn" type="submit" id="search" class="btn btn-success search-button">
+                                <button type="submit" id="search" class="btn btn-success search-button">
                                     Search
                                 </button>
                                 <hr class="hr" />
@@ -35,18 +33,12 @@
                         </div>
                     </div>
                 </form>
-
-                <!--City Search History-->
                 <div class="list-group" id="history"></div>
             </aside>
             <div class="col-lg-9 pb-3">
-
-                <!--Forecsat display-->
                 <section class="mt-3" id="city-display">
                 </section>
-
-                <!--Forecast for the 5-day section-->
-                <section class="row mt-3" id="five-day">
+                <section class="row mt-3" id="5-day">
                 </section>
             </div>
         </div>
@@ -54,8 +46,6 @@
 </body>
 <footer>
 </footer>
-
-<!--JavaScript-->
 <script
       src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"
       integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg=="
